Different 'seed' values do not yield different noise patterns when using cycles texture bake #41873

Closed
opened 2014-09-19 18:44:14 +02:00 by Martijn Steinrucken · 8 comments

System Information
Windows 8, gtx650m

Blender Version
Broken:2.71 official
Worked: (optional)

Short description of error
Different 'seed' values do not yield different noise patterns when using cycles texture bake

Exact steps for others to reproduce the error
Create a plane with a cube on it and add a sun light. Do a 'combined' bake on the plane with very low samples. Once thats done, change the seed value and do another bake to a different texture. Then compare textures, you will see that the noise pattern is the same.

**System Information** Windows 8, gtx650m **Blender Version** Broken:2.71 official Worked: (optional) **Short description of error** Different 'seed' values do not yield different noise patterns when using cycles texture bake **Exact steps for others to reproduce the error** Create a plane with a cube on it and add a sun light. Do a 'combined' bake on the plane with very low samples. Once thats done, change the seed value and do another bake to a different texture. Then compare textures, you will see that the noise pattern is the same.

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by Martijn Steinrucken 2014-09-19 18:44:14 +02:00

Added subscriber: @CountFrolic

Added subscriber: @CountFrolic

Added subscriber: @brecht

Added subscriber: @brecht

This should be trivial to fix by using kernel_data.integrator.seed for baking. For example like this:

        /* random number generator */
-       RNG rng = cmj_hash(offset + i, 0);
+       RNG rng = cmj_hash(offset + i, kernel_data.integrator.seed);
This should be trivial to fix by using `kernel_data.integrator.seed` for baking. For example like this: ``` /* random number generator */ - RNG rng = cmj_hash(offset + i, 0); + RNG rng = cmj_hash(offset + i, kernel_data.integrator.seed); ```

This issue was referenced by 63d0197f9b

This issue was referenced by 63d0197f9b5bcb2f1a46366ab3753c2c57b2220c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 63d0197f9b.

Closed by commit 63d0197f9b.

Thanks for the report, fixed on 63d0197f . Thanks @brecht
(I also included the fix in the - not currently used - differential code)

For the records, an easy way to test this is to change the seed and uncheck the 'clear' option.

Thanks for the report, fixed on 63d0197f . Thanks @brecht (I also included the fix in the - not currently used - differential code) For the records, an easy way to test this is to change the seed and uncheck the 'clear' option.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41873
No description provided.