Fix T41873: Different 'seed' values do not yield different noise patterns when using cycles texture bake

As per instructions by Brecht Van Lommel.